k8s/apps/n8n/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n
spec:
  ports:
    - port: 5678
      name: http
  selector:
    app: n8n
  type: ClusterIP
