k8s/apps/n8n/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  namespace: n8n
  annotations:
    external-dns.alpha.kubernetes.io/hostname: n8n.${CLUSTER_DOMAIN}
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - n8n.${CLUSTER_DOMAIN}
      secretName: n8n-tls
  rules:
    - host: n8n.${CLUSTER_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: n8n
                port:
                  number: 5678
            path: /
            pathType: Prefix
